Fix vertical spacing between NavigationBar and Intro

--- a/src/index.css
+++ b/src/index.css
@@ -1554,7 +1554,6 @@ a.anchor {
   position: relative;
   top: -50px;
   visibility: hidden;
-  height: 50px;
 }
 
 section {
